--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -8,9 +8,14 @@
 <body>
     <ul>
         <li><a href="{% url 'home' %}">Inicio</a></li>
-        <li><a href="{% url 'signup' %}">Signup</a></li>
-        <li><a href="{% url 'tasks' %}">Tasks</a></li>
-        <li><a href="">Cerrar</a></li>
+        <li><a href="{% url 'signup' %}">Registro</a></li>
+        <li><a href="{% url 'tasks' %}">Tareas</a></li>
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'signout' %}">Cerrar Sesion</a></li>
+        {% else %}  
+        <li><a href="{% url 'signin' %}">Iniciar Sesion</a></li>
+        {% endif %}
+        
     </ul>
     {% block content %}
     
