--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -3,29 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Django CRUD</title>
 </head>
-<body>
+<body> 
     <ul>
+        {% if user.is_authenticated %}
         <li><a href="{% url 'home' %}">Inicio</a></li>
         <li><a href="{% url 'signup' %}">Registro</a></li>
         <li><a href="{% url 'tasks' %}">Tareas</a></li>
-        {% if user.is_authenticated %}
+        {% else %}
         <li><a href="{% url 'signout' %}">Cerrar Sesion</a></li>
-        {% else %}  
         <li><a href="{% url 'signin' %}">Iniciar Sesion</a></li>
         {% endif %}
-        
     </ul>
     {% block content %}
     
     {% endblock %}
-
-
-
-
-
-
-
-</body>
-</html>
