--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Crear Tarea</h1>
-{{error}}
-<form action="/tasks/create/" method="post">
+{{ error }}
+<form action="{% url 'create_task' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Crear</button>
